# trace

./: .gitignore  LICENSE  README-CN.md  README.md  cli.py  mypy.ini  pyproject.toml  ruff.toml
.chariot/: probe.contract.json
.github/: repo-meta.yml
schemas/: artifact-index-1.0.json  evidence-bundle-1.0.json  summary-1.0.json  timeline-1.0.json  trace-manifest-1.0.json  types.ts
src/trace_core/: __init__.py  __main__.py  artifact_store.py  artifacts.py  bundle.py  cli.py  hash.py  inspector.py  models.py  protocol.py  provenance.py  render.py  run.py  timeline.py  validate.py
src/trace_core/artifact_types/: __init__.py  registry.py  standard_roles.py  standard_types.py
src/trace_core/exports/: __init__.py  audit.py  portal.py  summary.py
src/trace_core/governance/: __init__.py  compliance.py
src/trace_core/redaction/: __init__.py  engine.py  reports.py  rules.py
tests/: test_artifact_types.py  test_hash.py  test_redaction.py  test_trace_core.py  test_validate.py
