[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace"
version = "0.1.0"
description = "Local-file trace run capture and evidence packaging for Chariot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.scripts]
trace = "trace_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trace_core*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
